restore url-level partition selection